fix the nav bar on mobile. add ability to cancel the addition of a purchase and hide the form

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -206,20 +206,22 @@ h6 {
   background: var(--accent-color);
 }
 
-/*stop the nav bar disappearing on mobile*/
-/*@media (min-width: 1200px) {
 
-  .header~main,
-  .header~#footer {
-    margin-left: 300px;
+@media (min-width: 768px) {
+  .header {
+      flex-direction: row;
+      width: 100%;
   }
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 767px) {
   .header {
-    left: -100%;
+      flex-direction: column;
+      width: 300px;
+      height: 100%;
+      left: -100%; /*hide this until it is toggled*/
   }
-}*/
+}
 
 .header.header-show {
   left: 0;
@@ -259,7 +261,23 @@ h6 {
   padding: 0;
   z-index: 9997;
   display: flex;
+  gap:50px;
   width: 100%;
+  height:100%
+}
+
+@media (min-width: 768px) {
+  .navmenu,
+  .navmenu ul {
+      flex-direction: row;
+  }
+}
+
+@media (max-width: 767px) {
+  .navmenu,
+  .navmenu ul {
+      flex-direction: column;
+  }
 }
 
 .navmenu ul {
@@ -283,7 +301,7 @@ h6 {
 .navmenu a:focus,
 .navmenu p {
   color: var(--nav-color);
-  padding: 15px 10px;
+  padding: 10px 10px;
   font-family: var(--nav-font);
   font-size: 16px;
   font-weight: 400;
@@ -292,6 +310,7 @@ h6 {
   white-space: nowrap;
   transition: 0.3s;
   width: 100%;
+  margin-bottom: 0px
 }
 
 .navmenu a .navicon,
@@ -1295,7 +1314,7 @@ pre {
   }
 
 .page-content {
-    padding-top: 100px;
+    padding-top: 60px;
 }
 
 table {
